idea/testData/checker/regression/FunDeclarationAfterDot.fir.kt
class A

fun f() {
    A.<error descr="[EXPRESSION_REQUIRED] ">fun g() {
        g()
    }</error>
}
